--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'LA'
 - !lcsh 'Education -- Ireland -- History'
+- GITenberg
 title: Insula Sanctorum et Doctorum; Or, Ireland's Ancient Schools and Scholars
 url: http://www.gutenberg.org/ebooks/41073
